fix bug paris 1