@@ -1,52 +1,58 @@
-ESUP-SIGNATURE
-==============
+![ESUP-SIGNATURE](https://www.esup-portail.org/wiki/download/thumbnails/681148422/logo.png?version=1&modificationDate=1590494242000&api=v2)
 
-Esup-signature permet de signer des documents aux formats CAdES, XAdES ou par simple apposition une image dans un PDF
+https://www.esup-portail.org/wiki/display/SIGN/
 
-La signature s'appuie sur la solution DSS de la Commission Européenne, voir :
-https://ec.europa.eu/cefdigital/wiki/pages/viewpage.action?pageId=46992515
+Esup-signature permet gérer les circuits de visa et de signer des documents aux formats CAdES, XAdES, PAdES ou par simple apposition d'une image dans un PDF.
 
-Pour plus de détails voir:
-https://www.esup-portail.org/wiki/display/SIGN/esup-signature
+Son objectif est de proposer un module de signature type micro-service permettant à un établissement d'intégrer la signature numérique dans ses services institutionnels.
 
-#####Ajout de sedalib dans le dépot maven
+L'usage commun au niveau des établissements de l'Enseignement Supérieur et de la Recherche des briques que sont shibboleth (fédération d'iendtités Renater), ldap (supann), TCS (Trusted Certificate Service) de Renater via digicert font d'esup-signature un outil qui peut potentiellement s'adapter aux différents établissements de l'ESR.
 
-mvn install:install-file -Dfile=src/etc/sedalib-2.x.x-SNAPSHOT.jar -DgroupId=fr.gouv.vitam -DartifactId=sedalib -Dversion=2.x.x-SNAPSHOT
+La signature éléctronique s'appuie sur la solution DSS de la Commission Européenne, voir :
+https://ec.europa.eu/cefdigital/wiki/display/CEFDIGITAL/DSS+releases
 
-Installation esup signature
+La signature à l'aide d'une clé matérielle est possible à l'aide de l'application NexU en lien avec DSS. La liste des dispositifs matériels pris en charge est présente ici : https://nowina.lu/solutions/java-less-browser-signing-nexu/
 
-Prérequis :
+# Changelog
 
-maven > 3.1.0
+https://www.esup-portail.org/wiki/display/SIGN/Change+log
 
-Install sedalib
+# Prérequis
 
-Suivre la procédure d'installation de sedatools : https://github.com/ProgrammeVitam/sedatools
+ * OpenJDK 11
+ * Maven 3.1
+ * GhostScript
+ * PostgreSQL
+ 
+# Installation
 
-cd /tmp
-mkdir test-sedatools
-cd test-sedatools
-git clone https://github.com/ProgrammeVitam/java-libpst-origin.git
-cd java-libpst-origin/
-git checkout master
-mvn clean install
-(L'erreur rencontée lors de cette installation ne posent pas de problème pour la suite)
-cd ..
-git clone https://github.com/ProgrammeVitam/droid-origin.git
-cd droid-origin
-mvn clean install
-cd ..
-git clone https://github.com/ProgrammeVitam/sedatools.git
-cd sedatools/
-mvn clean install
+https://www.esup-portail.org/wiki/display/SIGN/Installation
 
-Dossier de travail service tomcat : WorkingDirectory=/opt/tomcat-esup-signature/temp
+# Configuration
 
-Configuration :
+https://github.com/EsupPortail/esup-signature/blob/master/src/main/resources/application.yml
 
-path ojService
+voir : https://www.esup-portail.org/wiki/display/SIGN/Sources+et+configuration#Sourcesetconfiguration-Configuration
 
-launch nexu: java -Djdk.gtk.version=2.2 -jar nexu.jar
+# Compilation
 
-jdk11 + openjfx
-java --module-path /opt/tools/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.media,javafx.graphics,javafx.swing,javafx.web -Djdk.gtk.version=2.2 -jar nexu-bundle-1.23-SNAPSHOT/nexu.jar
+```
+mvn clean package
+```
+Un jeu de test est exécuté au moment de la compilation, tous les prérequis et paramètres doivent être correctes pour que le projet compile
+
+# Démarrage
+
+```
+mvn springboot:run
+```
+
+# Démonstration
+
+Site de démonstration, s'appuyant sur l'authentification shibboleth via la fédération Renater :
+
+https://esup-signature-demo.univ-rouen.fr
+
+# Licenses
+
+Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
